# 2048_game_automation

./: .gitignore  README.md  pyproject.toml
src/: main.py
utilities/: moves.py  utils.py
